fix(core): config round-trip data-loss, serializer escaping, atomic persistence; cache mustache
- ConfigurationDTO mirrored only ~half of the configuration properties, so ~100
  settings were silently dropped on a /mockserver/configuration serialize+reload.
  Mirror all properties across field/copy-constructor/buildObject/applyTo, with a
  reflection-driven round-trip test that fails if a new property is unmapped.
- curl/Java/HAR generators now escape correctly: POSIX '\'' idiom for curl header
  names/values/body, escapeJava for generated method/path, real URL-encoding for HAR.
- FilesystemBlobStore writes to a temp file and atomically renames it into place so a
  concurrent reader never sees a truncated file; FileWatcher no longer treats a
  transient read error as a content change.
- Mustache templates are compiled once and cached, mirroring the Velocity engine.